# Entropy-Desktop-UI

./: .gitignore  Cargo.toml  README.md  package.json  tauri.conf.json
.github/workflows/: ci.yml
capabilities/: main.json
permissions/: default.toml
src/: main.rs  protocol.rs
src-tauri/: Cargo.toml  check_final.txt  check_full.txt  check_log.txt  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/permissions/: default.toml
src-tauri/src/: app_state.rs  audio.rs  commands.rs  crypto.rs  main.rs  signal_store.rs
src-tauri/src/commands/: crypto.rs  network.rs  vault.rs
src-tauri/src/protocol/: types.rs
src-tauri/src/tests/: new_tests.rs  protocol_tests.rs
src-ui/: App.svelte
src-ui/components/: AttachmentRenderer.svelte  ChatWindow.svelte  Sidebar.svelte  VoiceNotePlayer.svelte
src-ui/lib/: attachment_store.ts  crypto.ts  network.ts  secure_storage.ts  signal_manager.ts  store.ts  types.ts  utils.ts
src-ui/lib/actions/: auth.ts  contacts.ts  message_utils.ts  messaging.ts
src-ui/lib/stores/: audio.ts  user.ts
src-ui/tests/: Sidebar.test.ts  network.test.ts  signal_manager.test.ts  user_store.test.ts
