
[package]
name = "entropy"
version = "0.1.0"
description = "Sovereign, Decentralized Messaging Client"
authors = ["Entropy Team <contact@entropy.network>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.33.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
tokio-socks = "0.5"
cpal = "0.17.1"
hound = "3.5.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Reduce binary size and remove stack trace info
codegen-units = 1 # Better optimizations
lto = true # Link Time Optimization across all crates
strip = true # Remove all debug symbols and symbol tables from the binary

[dev-dependencies]
tempfile = "3.24.0"
